--- a/trunk/tppm/nbproject/project.properties
+++ b/trunk/tppm/nbproject/project.properties
@@ -44,7 +44,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tppm.TppmApp
+main.class=tppm.views.TppmApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
