--- a/tppm/nbproject/project.properties
+++ b/tppm/nbproject/project.properties
@@ -21,10 +21,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/tppm.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mockito-all-1.9.5.jar=C:\\Users\\Tiago\\Downloads\\mockito-1.9.5\\mockito-all-1.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.mockito-all-1.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -32,7 +34,8 @@ javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
