Implementação da interface EmpregadoDAO: 	-  Incluir empregado 	- Excluir Empregado 	- ALterar Empregado 	- Procurar Empregado Criado também seus testes.

--- a/tppm/nbproject/project.properties
+++ b/tppm/nbproject/project.properties
@@ -22,11 +22,13 @@ dist.jar=${dist.dir}/tppm.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mockito-all-1.9.5.jar=C:\\Users\\Tiago\\Downloads\\mockito-1.9.5\\mockito-all-1.9.5.jar
+file.reference.mockito-all-1.9.5.jar-1=C:\\Downloads\\mockito-1.9.5\\mockito-all-1.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.mockito-all-1.9.5.jar}
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.mockito-all-1.9.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
