--- a/trunk/tppm/nbproject/project.properties
+++ b/trunk/tppm/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.desc=A simple java desktop application based on Swing Application Framework
 application.homepage=http://appframework.dev.java.net
 application.title=Basic Application Example
@@ -20,18 +23,19 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/tppm.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mockito-all-1.9.5.jar=C:\\Users\\Tiago\\Downloads\\mockito-1.9.5\\mockito-all-1.9.5.jar
-file.reference.mockito-all-1.9.5.jar-1=C:\\Downloads\\mockito-1.9.5\\mockito-all-1.9.5.jar
+file.reference.mockito-all-1.9.5.jar=mockito-all-1.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.mockito-all-1.9.5.jar}:\
-    ${file.reference.mockito-all-1.9.5.jar-1}
+    ${file.reference.mockito-all-1.9.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -52,6 +56,7 @@ javadoc.windowtitle=
 main.class=tppm.views.TppmApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
