--- a/tppm/src/tppm/views/resources/TppmApp.properties
+++ b/tppm/src/tppm/views/resources/TppmApp.properties
@@ -1,11 +1,11 @@
 # Application global resources
 
 Application.name = tppm
-Application.title = Basic Application Example
+Application.title = Cadastro de Empregados
 Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
-Application.homepage = http://appframework.dev.java.net
-Application.description = A simple java desktop application based on Swing Application Framework
+Application.vendor = pm
+Application.homepage = http://www.uniriotec.br
+Application.description = Um simples sistema para:\na) Manuten\u00e7\u00e3o (incluir/Alterar/Excluir) dos dados dos empregados de uma empresa.\nb) C\u00e1lculo para solicita\u00e7\u00e3o de empr\u00e9stimo consignado.
 Application.vendorId = Sun
 Application.id = ${Application.name}
 Application.lookAndFeel = system
