--- a/trunk/tppm/nbproject/project.properties
+++ b/trunk/tppm/nbproject/project.properties
@@ -1,10 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
-application.desc=A simple java desktop application based on Swing Application Framework
-application.homepage=http://appframework.dev.java.net
-application.title=Basic Application Example
-application.vendor=Sun Microsystems Inc.
+application.desc=Um simples sistema para:\na) Manuten\u00e7\u00e3o (incluir/Alterar/Excluir) dos dados dos empregados de uma empresa.\nb) C\u00e1lculo para solicita\u00e7\u00e3o de empr\u00e9stimo consignado.
+application.homepage=http://www.uniriotec.br
+application.title=Cadastro de Empregados
+application.vendor=pm
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
