--- a/trunk/tppm/src/tppm/views/resources/TppmView.properties
+++ b/trunk/tppm/src/tppm/views/resources/TppmView.properties
@@ -1,9 +1,5 @@
-# Resources for the TppmView class
-
-# top-level menus
-
-fileMenu.text = File
-helpMenu.text = Help
+fileMenu.text = Arquivo
+helpMenu.text = Ajuda
 
 # @Action resources
 
@@ -30,3 +26,9 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+aboutMenuItem.text=Sobre
+exitMenuItem.text=Sair
+menuEmpregados.text=Empregados
+incluirEmpregadoMenuItem.text=Incluir Empregado
+excluirEmpregadoMenuItem.text=Excluir Empregado
+alterarEmpregadoMenuItem.text=Alterar Empregado
