Pair Programming: Tiago + Pedro Interface para o cálculo de empréstimos Função para arredondar doubles

--- a/tppm/src/tppm/views/resources/TppmView.properties
+++ b/tppm/src/tppm/views/resources/TppmView.properties
@@ -32,3 +32,11 @@ menuEmpregados.text=Empregados
 incluirEmpregadoMenuItem.text=Incluir Empregado
 excluirEmpregadoMenuItem.text=Excluir Empregado
 alterarEmpregadoMenuItem.text=Alterar Empregado
+jLabel1.text=Para calcular um empr\u00e9stimo, digite os dados abaixo:
+cpfInput.text=
+jLabel2.text=CPF:
+jLabel3.text=Valor do Empr\u00e9stimo:
+valorInput.text=
+jLabel4.text=N\u00famero de Presta\u00e7\u00f5es (1 a 18):
+numeroPrestacoesInput.text=
+btCalcularEmprestimo.text=Calcular Empr\u00e9stimo
